==> tokifukonew/MyTempSensor_nrf52/src/SSD1306.c <==
#include "ssd1306.h"
#include "main.h"

void ssd1306_WriteCommand(uint8_t byte)
{
    ret_code_t err_code;
    uint8_t buffer[2];
    buffer[0] = 0x00;
    buffer[1] = byte;
    err_code = nrf_drv_twi_tx(_ssd1306_m_twi, SSD1306_I2C_ADDR, buffer, sizeof(buffer), true);
    if (err_code == NRF_SUCCESS)
    {
        //NRF_LOG_INFO("Device Address and Register Address and Data sent");
    }
    NRF_LOG_FLUSH();
    if (NRF_SUCCESS == err_code)
    {
        err_code = nrf_drv_twi_tx(_ssd1306_m_twi, SSD1306_I2C_ADDR, &byte, 1, true);
    }
    nrf_delay_ms(1);
    // HAL_I2C_Mem_Write(_ssd1306_m_twi, SSD1306_I2C_ADDR, 0x00, 1, &byte, 1, true);
}

void ssd1306_WriteData(uint8_t *bufp, size_t buff_size)
{
    ret_code_t err_code;
    uint8_t buffer[1 + buff_size];
    memset(buffer, 0x40, 1);
    memcpy(buffer + 1, bufp, buff_size);

    if (NRF_SUCCESS == err_code)
    {
        err_code = nrf_drv_twi_tx(_ssd1306_m_twi, SSD1306_I2C_ADDR, buffer, buff_size, true);
    }
    nrf_delay_ms(1);
}
